<resources>
    <string name="app_name">SamosTrails</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="lbl_you_are_at">YOU ARE AT</string>
    <string name="btn_get_location">GET MY LOCATION</string>
    <string name="btn_start_location_updates">START LOCATION UPDATES</string>
    <string name="btn_stop_location_updates">STOP LOCATION UPDATES</string>
    <string name="record">Record</string>
    <string name="save">Save</string>
    <string name="test">Test</string>
    <string name="your_trails">My Trails</string>
    <string name="recording">Recording</string>
    <string name="profil">Profil</string>
    <string name="more">More</string>
    <string name="distance_klm">Distance(m):</string>
    <string name="time">Time:</string>
    <string name="title">Title:</string>
    <string name="description">Description:</string>
    <string name="starting_point">Starting Point:</string>
    <string name="main_sights">Main Sights:</string>
    <string name="tips">Tips:</string>
    <string name="distance">Distance:</string>
    <string name="kind_of_trail">Kind Of Trail:</string>
    <string name="one_way">One Way</string>
    <string name="loop">Loop</string>
    <string name="difficulty_level">Difficulty Level:</string>
    <string name="easy">Easy</string>
    <string name="moderate">Moderate</string>
    <string name="challenging">Challenging</string>
    <string name="sport">Sport</string>
    <string name="extreme">Extreme</string>
    <string name="children_friendly">Children Friendly:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="other_transports">Other Transports:</string>
    <string name="connection_to_other_trails">Connection to other trails:</string>
    <string name="submit_trail">Submit Trail</string>
    <string name="save_trail">Save Trail</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="about_us">
     The \'Samos Trails\' is a project, which is created within the Bachelor\'s thesis by the students Zoukas Evangelos and Bariampas Lidion Thomas, in collaboration with Professor Spyros Kokolakis. This project made an extensive reference to the hiking trails on the island of Samos, creating the prospect of emergence of these paths. It includes informing the walker through maps, positioning technologies, and through information (historical, guidance, etc.), important for a complete tour.
    </string>

    <!-- App name -->

    <string name="app_version_number">1.0</string>
    <string name="fb_login_protocol_scheme">fb631461603708736</string>
    <string name="menu_settings">Settings</string>

    <string name="cd_repeat">Repeat one or all</string>
    <string name="cd_previous">Skip backwards</string>
    <string name="cd_play">Play and pause</string>
    <string name="cd_next">Skip forwards</string>
    <string name="local_trails">My Trails</string>
    <string name="no_internet_found">No Internet Found</string>
    <string name="current_available_trails">Trails</string>
    <string name="back">Back</string>
    <string name="_0_0">0.0</string>
    <string name="tongle">tongle</string>
    <string name="avg_speed">Avg Speed(Km/h):</string>
    <string name="stopstartedtrail">Stop</string>
    <string name="avg_walking_time">Avg Walking Time:</string>
    <string name="favorite">Favorite</string>
    <string name="unfavorite">UnFavorite</string>
    <string name="gps_network_not_enabled">GPS not Enabled. Please enable GPS to Record Trails.</string>
    <string name="open_location_settings">Open Settings</string>
    <string name="Cancel">Cancel</string>
    <string name="welcome_please_login_to_use_your_account">Welcome, please login to use your account.</string>
</resources>
