<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.gms.maps.MapView
        android:id="@+id/starttrailmap"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@color/downHeader"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1"
            android:layout_alignParentStart="true"
            android:id="@+id/ditancestart">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".4"
                android:text="@string/distance_klm"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/distancetrail"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".6"
                android:text="@string/_0_0"
                android:textColor="@color/white"/>
        </LinearLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:id="@+id/speedstart"
            android:layout_marginStart="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".4"
                android:text="@string/avg_speed"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/avgspeedstart"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".6"
                android:textColor="@color/white"
                android:text="@string/_0_0"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:id="@+id/timestart"
            android:layout_marginStart="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".4"
                android:text="@string/time"
                android:textColor="@color/white"/>
            <Chronometer
                android:id="@+id/timecreatetrail"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".6"
                android:textColor="@color/white"/>
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:keepScreenOn="false"
        android:background="@color/downHeader"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">
        <ImageButton
            android:id="@+id/backtrailbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/startback"
            android:background="@drawable/transparent_back"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/back" />
        <ImageButton
            android:id="@+id/starttrailbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/start_unpressed"
            android:background="@drawable/transparent_back"
            android:layout_centerInParent="true"
            android:contentDescription="@string/tongle" />
        <ImageButton
            android:id="@+id/stopbuttonstart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/stop"
            android:background="@drawable/transparent_back"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/stopstartedtrail"
            android:layout_marginEnd="20dp"
            android:visibility="gone"/>
    </RelativeLayout>
</RelativeLayout>