<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sv"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="gr.aegean.com.samostrails.MainActivity">


    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#10191919"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/contenttrailinfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/downHeader">

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/backbutton"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_gravity="start"
                        android:layout_weight=".2"
                        android:drawableStart="@drawable/backbutton"
                        android:text="@string/back"
                        app:backgroundTint="@color/downHeader" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/trail_title"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight=".5"
                        android:background="@color/downHeader"
                        android:textColor="#ffffff"
                        android:textSize="30sp" />
                </LinearLayout>
                <RelativeLayout
                    android:id="@+id/map_layout"
                    android:layout_width="match_parent"
                    android:layout_height="300dp">

                    <com.google.android.gms.maps.MapView
                        android:id="@+id/map"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"/>


                    <ImageView
                        android:id="@+id/transparent_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@color/transparent" />
                </RelativeLayout>


                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/description_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="Description:"
                    android:textSize="20sp"
                    android:textStyle="bold"

                    />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/drop_shadow_test"
                    android:textAlignment="center" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/startingpoint_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="Starting Point:"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/startingpoint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/drop_shadow_test"
                    android:textAlignment="center" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/mainsights_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="Main Sights:"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/mainsights"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/drop_shadow_test"
                    android:textAlignment="center" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tips_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="Tips:"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tips"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/drop_shadow_test"
                    android:textAlignment="center" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/distance_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="Distance:"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/distance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/drop_shadow_test"
                    android:textAlignment="center" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/kindoftrail_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="Kind Of Trail:"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/kindoftrail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/drop_shadow_test"
                    android:textAlignment="center" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/difficultylevel_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:text="Difficulty Level:"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/difficultylevel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/drop_shadow_test"
                    android:textAlignment="center" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/childrenfriendly_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:text="Children Friendly:"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/childrenfriendly"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/drop_shadow_test"
                    android:textAlignment="center" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/other_transport_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="Other Transports:"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/othertransport"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/drop_shadow_test"
                    android:textAlignment="center" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/connectiontoothertrails_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="Connection to other trails:"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/connectiontoothertrails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/drop_shadow_test"
                    android:textAlignment="center" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/contenttrailinfo"
                android:orientation="horizontal"
                android:id="@+id/buttoncontainertrailinfo">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight=".5">

                    <Button
                        android:id="@+id/deletetrail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="@drawable/statelist"
                        android:drawableStart="@drawable/heart"
                        android:text="@string/unfavorite"
                        android:textColor="#FFFFFF" />

                    <Button
                        android:id="@+id/savetrail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:background="@drawable/statelist"
                        android:drawableStart="@drawable/heart_filled"
                        android:text="@string/favorite"
                        android:textColor="#FFFFFF" />

                    <Button
                        android:id="@+id/deleterecordedtrail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:background="@drawable/statelist"
                        android:drawableStart="@drawable/delete"
                        android:text="Delete"
                        android:textColor="#FFFFFF"
                        android:visibility="gone"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="0.5">

                    <Button
                        android:id="@+id/start_trail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="@drawable/statelist"
                        android:drawableStart="@drawable/start_pressed"
                        android:text="Start Trail"
                        android:textColor="#FFFFFF" />

                    <Button
                        android:id="@+id/edit_trail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="@drawable/statelist"
                        android:drawableStart="@drawable/editmap"
                        android:text="Edit Trail"
                        android:textColor="#FFFFFF"
                        android:visibility="gone" />
                </RelativeLayout>
            </LinearLayout>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/startrecordedtrails"
                android:background="@drawable/statelist"
                android:visibility="gone"
                android:text="Start Trails"
                android:drawableLeft="@drawable/start_pressed"
                android:textColor="#fff"
                android:layout_below="@+id/buttoncontainertrailinfo"/>



        </RelativeLayout>

    </FrameLayout>

</ScrollView>